2013-09-17  Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css,
	include/functions_incidents.php,
	operation/incidents/incident_dashboard.php: Fixed several
	errors related to ACLs and mistakes counting incidents in
	dashboard view.

2013-09-17  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.sql
	  extras/migrate.sql
	  include/functions_inventories.php
	  operation/inventories/inventory_search.php: Show inventories
	without object type in treeview.

2013-09-17  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/side_menu.php: Fixed the incident search from
	the side menu.

2013-09-17  Vanessa Gil <vanessa.gil@artica.es>

	* operation/download/browse.php: Fixed bug: You can't
	upload files to File Releases section.

2013-09-17  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/side_menu.php: Fixed the incident search from
	the side menu.
	
2013-09-17  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/ajax/crm.php: Fixed the ajax company search.

2013-09-17  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_calendar.php: Fixed bad count
	of vacation days.

	* include/languages/index.pot: Update traductions.

2013-09-16  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions.php: Now is possible to do an
	include_once instead of an include in the function
	"enterprise_include".
	
	* include/functions_crm.php: Added an enterprise include.
	Improved the function "crm_get_all_invoices".
	
	* operation/side_menu.php: Now the 'company roles' section
	only appears if the user has the 'CM' profile.
	
	* operation/companies/company_detail.php: Some ACL fixes.
	
	* operation/invoices/invoice_detail.php: Some ACL fixes.
	Now is possible to access to the invoice creation from
	the invoice list.
	
	* operation/invoices/invoice_view.php: Bug and ACL fixes.
	
	* operation/invoices/invoices.php: ACL improvements. Now
	is possible to create an invoice from outside the company
	tabs.
	